# command-stream

./: $.basename.mjs  $.cat.mjs  $.cd.mjs  $.cp.mjs  $.dirname.mjs  $.echo.mjs  $.env.mjs  $.false.mjs  $.features.test.mjs  $.ls.mjs  $.mjs  $.mkdir.mjs  $.mv.mjs  $.pwd.mjs  $.rm.mjs  $.seq.mjs  $.sleep.mjs  $.test.mjs  $.touch.mjs  $.true.mjs  $.which.mjs  $.yes.mjs  .gitignore  .gitkeep  .gitpod.Dockerfile  .gitpod.yml  .jscpd.json  .npmignore  .prettierignore  BEST-PRACTICES.md  CHANGELOG.md  CLAUDE.md  README.md  SHELL_OPERATORS_IMPLEMENTATION.md  STREAMING_INTERFACES_SUMMARY.md  builtin-commands.test.mjs  bunfig.toml  claude-profile-list.sh  claude-profile-restore.sh  claude-profile-save.sh  (+18 more)
rust/: BEST-PRACTICES.md  CHANGELOG.md  Cargo.toml  README.md
rust/changelog.d/: 20260608_issue_160_separate_language_releases.md  20260608_issue_162_release_job_skip.md  20260609_232146_stream_parity.md  20260609_issue_164_rebase_before_staging.md  20260610_000000_exitcode-alias.md  20260610_000000_getcwd-error-handling.md  20260610_101606_cd-sh-compatibility.md  20260621_151257_go_template_split_diagnostic.md
rust/scripts/: publish-crate.rs  version-and-commit.rs
rust/src/: ansi.rs  events.rs  lib.rs  macros.rs  main.rs  pipeline.rs  quote.rs  shell_parser.rs  state.rs  stream.rs  trace.rs  utils.rs
rust/src/commands/: basename.rs  cat.rs  cd.rs  cp.rs  dirname.rs  echo.rs  env.rs  exit.rs  (+14 more)
rust/tests/: builtin_commands.rs  events.rs  getcwd_error_handling.rs  macros.rs  pipeline.rs  process_runner.rs  shell_parser.rs  state.rs  stream.rs  utils.rs  virtual_commands.rs
(+1259 files in other folders)
