[package]
name = "command-stream"
version = "0.8.3"
edition = "2021"
authors = ["link-foundation"]
description = "Modern shell command execution library with streaming, async iteration, and event support"
license = "Unlicense"
repository = "https://github.com/link-foundation/command-stream"
keywords = ["shell", "command", "streaming", "async", "process"]
categories = ["command-line-utilities", "asynchronous"]
readme = "../README.md"

[lib]
name = "command_stream"
path = "src/lib.rs"

[[bin]]
name = "command-stream"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.43", features = ["full", "process", "signal"] }
async-trait = "0.1"
thiserror = "2.0"
once_cell = "1.20"
regex = "1.11"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
nix = { version = "0.29", features = ["signal", "process"] }
libc = "0.2"
which = "7.0"
glob = "0.3"
chrono = "0.4"
filetime = "0.2"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.14"
assert_cmd = "2.0"

[features]
default = []
json = ["serde", "serde_json"]

[profile.release]
opt-level = 3
lto = true
